service/kcp-dummy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kcp
spec:
  ports:
    - protocol: TCP
      name: https
      port: 6443
      targetPort: 6443
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcp
  labels:
    app: kcp
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
  replicas: 1
  selector:
    matchLabels:
      app: kcp
  template:
    metadata:
      labels:
        app: kcp
    spec:
      containers:
      - name: kcp
        image: quay.io/klape/kcp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6443
        command: ["/bin/sh", "-c", "--"]
        args: [ "sleep infinity" ]
        volumeMounts:
          - name: etcd-certs
            mountPath: /etc/etcd/tls/server
          - name: kcp-certs
            mountPath: /etc/kcp/tls/server
      volumes:
      - name: etcd-certs
        secret:
          secretName: etcd-secret
      - name: kcp-certs
        secret:
          secretName: kcp-secret
