service/kcp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kcp
spec:
  host: kcp.apps.crcd01ue1.zmsj.p1.openshiftapps.com
  port:
    targetPort: https
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC8jCCAdqgAwIBAgIRAOKy7I+7EEb/TJeHTqKUSvAwDQYJKoZIhvcNAQELBQAw
[...]
      H8ea/0hZ66Jao6Nfrdy6YzVf3uXdB95mbM15Jx6nFijMMyAdHyo=
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: kcp
    weight: 100
  wildcardPolicy: None
